<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wubeast.calculator_v2.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="383dp"
        android:layout_height="511dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button1"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="192dp"
            android:onClick="btnNumClick"
            android:text="@string/_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="24dp"
            android:onClick="btnNumClick"
            android:text="@string/_2"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="22dp"
            android:onClick="btnNumClick"
            android:text="@string/_3"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="22dp"
            android:onClick="btnNumClick"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="212dp"
            android:layout_height="0dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="24dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="195dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="22dp"
            android:onClick="btnAddClic"
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button5"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="19dp"
            android:onClick="btnNumClick"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:onClick="btnNumClick"
            android:text="@string/_6"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button7"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:onClick="btnNumClick"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@+id/buttonDot"
            app:layout_constraintEnd_toStartOf="@+id/button8" />

        <Button
            android:id="@+id/button8"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="214dp"
            android:onClick="btnNumClick"
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
            app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="19dp"
            android:onClick="btnMinusClic"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@+id/buttonMult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

        <Button
            android:id="@+id/button9"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="106dp"
            android:onClick="btnNumClick"
            android:text="@string/_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button0"
            app:layout_constraintHorizontal_bias="0.923"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button0"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="106dp"
            android:onClick="btnNumClick"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonDot"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="112dp"
            android:onClick="btnNumClick"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonDiv" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:onClick="btnDivClic"
            android:text="@string/div"
            app:layout_constraintBottom_toTopOf="@+id/buttonC"
            app:layout_constraintEnd_toStartOf="@+id/buttonMult" />

        <Button
            android:id="@+id/buttonMult"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="18dp"
            android:onClick="btnMultClic"
            android:text="@string/mult"
            app:layout_constraintBottom_toTopOf="@+id/buttonEq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

        <Button
            android:id="@+id/buttonEq"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="37dp"
            android:onClick="btnAnsClick"
            android:text="@string/equal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMult" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="46dp"
            android:layout_height="51dp"
            android:layout_marginStart="215dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="40dp"
            android:onClick="btnClearClick"
            android:text="@string/c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonEq"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="215dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="211dp"
            android:layout_height="34dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editText"
            app:layout_constraintEnd_toStartOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="78dp"
            android:layout_height="30dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
